welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:25: error: Unmatched closing brace '}' ignored here
}
^